Hover botones; bug-fix botones header no visibles

--- a/src/app/iniciar-sesion/iniciar-sesion.component.css
+++ b/src/app/iniciar-sesion/iniciar-sesion.component.css
@@ -1,55 +1,52 @@
 body {
-    margin: 0 ;
-    padding: 0;
-    background-color: #2C3C5B;
-    height: 100vh;
-  } 
-  h3{
-    font-weight: 500;
-  }
-  form{
-    background-color:#C4C4C4;
-    border-radius: 10px;    
-    color:#2C3C5B;
-    font-size: 17px;
-    padding: 30px;
-    margin: 0 auto;
-    width: 350px;
-    position: relative;
-    top: 8vh;
-
-  }
-  .center-content{
-     display: flex;
-    align-items: center;
-  }
-  .center-content button{
-    border: 0;
-    text-align: center;
-    background:#0AC5A8;
-    color:#2C3C5B;
-    font-size:17px;
-    margin: 0 auto;
-    padding: 10px 0px;
-    width:150px;
-    border-radius: 10px; 
-    
-  }
-  .form-control{
-    background-color:#A8A8A8
-  }
-  .row{
-    
-    background: url(../../assets/img-backgroundLogIn.png);
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-size: cover;
-    /*height: 70vh;*/
-  }
-
-  .row .col-md-12{
-    background-color: #2C3C5B;
-    height: 16vh;
-    /* width: 100%; */
-  }
+  margin: 0 ;
+  padding: 0;
+  background-color: #2C3C5B;
+  height: 100vh;
+} 
+h3{
+  font-weight: 500;
+}
+form{
+  background-color:#C4C4C4;
+  border-radius: 10px;    
+  color:#2C3C5B;
+  font-size: 17px;
+  padding: 30px;
+  margin: 0 auto;
+  width: 350px;
+  position: relative;
+  top: 8vh;
+}
+.center-content{
+  display: flex;
+  align-items: center;
+}
+.center-content button{
+  border: 0;
+  text-align: center;
+  background:#0AC5A8;
+  color:#2C3C5B;
+  font-size:17px;
+  margin: 0 auto;
+  padding: 10px 0px;
+  width:150px;
+  border-radius: 10px; 
+}
+.form-control{
+  background-color:#A8A8A8
+}
+.row{
+  background: url(../../assets/img-backgroundLogIn.png);
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+.row .col-md-12{
+  background-color: #2C3C5B;
+  height: 16vh;
+}
+.center-content button:hover{
+  background-color: #0FB39A;
+}
